--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 /test_pred.py
 /venv
 /create_cat_list.py
+atlass_zr500vsd_2.PNG
+atlass_zr500vsd_3.PNG
+atlass_zr500vsd_4.PNG
+atlass_zr500vsd_5.PNG
+atlass_zr500vsd.PNG
+tes_ocr.py
